--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ content/*
 content/themes/*
 !/content/themes/
 
-content/themes/type-theme/*
-!/content/themes/type-theme/
+content/themes/type/*
+!/content/themes/type/
 
-!/content/themes/type-theme/*
+!/content/themes/type/*
